[package]
name = "ps-hash"
version = "0.1.0-21"
edition = "2021"
description = "Generates 64-byte ascii hashes with 256 bits of security."
license = "GPL-3.0-or-later"

[dependencies]
blake3 = "1.8.2"
ps-base64 = "0.1.0-6"
ps-ecc = "0.1.0-7"
ps-pint16 = "0.1.0-4"
sha2 = "0.10.9"
thiserror = "2.0.17"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
