[package]
name = "ps-hash"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true

[workspace]
resolver = "2"
members = ["crates/core"]

[workspace.package]
version = "0.1.0-24"
edition = "2021"
description = "Generates 64-byte ascii hashes with 256 bits of security."
license = "GPL-3.0-or-later"

[workspace.dependencies]
ps-hash-core = { path = "crates/core", version = "0.1.0-24" }

[dependencies]
ps-hash-core.workspace = true

[dev-dependencies]
ps-base64 = "0.1.0-6"
ps-pint16 = "0.1.0-4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
